feat: add api annotations album
